API : Flesh out monster image generation pipeline
- Job status transitions
- Documentation
- Type generation
- Frontend and backend endpionts
- Unit tests and integration tests
